--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: Build
 
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -17,10 +17,7 @@ jobs:
     - uses: microsoft/setup-msbuild@v1.1
     - run: build.bat
       shell: cmd
-    - uses: papeloto/action-zip@v1
+    - uses: actions/upload-artifact@v4
       with:
-        files: Build
-        dest: VNTranslationTools.zip
-    - uses: softprops/action-gh-release@v1
-      with:
-        files: VNTranslationTools.zip
+        name: VNTranslationTools
+        path: Build
